Fix - double click not work on mobile device

--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -40,8 +40,8 @@
   text-align: left;
   padding: 5px 15px;
 
-  .name {
-    padding-left: 3px;
+  md-icon {
+    margin-right: 10px;
   }
 }
 
@@ -175,21 +175,6 @@
       line-height: 64px;
       margin: 0;
       padding-left: 40px;
-    }
-  }
-}
-
-.new-menu-list {
-  .new-menu-list-item .new-menu-list-item-inner {
-    width: auto;
-
-    .icon {
-      margin-top: 5px;
-      width: 100%;
-    }
-
-    .name {
-      width: auto;
     }
   }
 }
